rega-genotype/src/main/webapp/style/hiv/genotype.css
/* general layout */

html {
	padding: 0px;
	margin: 0px;
	border: 0px;
}

h2, h3 {
	color: darkblue;
}

h2 {
	font-size: 130%;
}

body {
	background-color: #fbfbfb;
	font-family: arial,sans-serif;
	font-size: 80%;
	padding: 0px;
	margin: 0px;
	border: 0px;
}

div.imgDiv, div.downloadContainer{
	width: 100%;
	margin: 1em auto 0.5em auto;
	text-align: center;
}

.seqInput {
	margin-top: 2em;
	margin-left: auto;
	margin-right: auto;
	width: 680px;
}

.seqInput button {
	margin: 3px;	
}

.header {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.region-genome img {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.form {
	width: 85%;
	margin: 0px auto;
}

table.jobTable {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	border-spacing: 2px;
}

table.reftable {
	width: 70%;
	margin-left: 0;
	margin-right: auto;
	border-spacing: 2px;
}

table.jobTable td, table.jobTable th {
	border-top: 1px inset gray;
	border-bottom: 1px inset gray;
	padding: 0.5em;
	text-align: left;
	line-height: 60px;
}

table.reftable td, table.reftable th {
	border-top: 1px inset gray;
	border-bottom: 1px inset gray;
	padding: 0.5em;
	text-align: left;
}

table.jobTable col,
table.reftable col {
	border-left: 1px outset gray;
	border-right: 1px outset gray;
}

table.jobTable td, table.jobTable th, 
table.reftable td, table.reftable th {
	border-left: 1px outset gray;
	border-right: 1px outset gray;
}

table.jobTable tr > td {
	border-left-width: inherit;
	border-right-width: inherit;	
}

table.jobTable .nrb {
	border-right: 0px;
}

table.jobTable .nlb {
	border-left: 0px;
}

table.jobTable .jobTableHeader {
	line-height: 30px;
	font-weight: bold;
	text-align: center;
}

table.jobTable td img, .detailsForm img {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.detailsForm {
	margin: 3ex auto;
	width: 800px;
}

.detailsForm .details {
	border: 1px inset gray;
	margin: 2px;
	padding: 0.5em;
	text-align: left;
}

.detailsForm h2 {
	border: 1px inset gray;
	margin: 2px;
	padding: 0.5em;
	background-color: darkblue;
	color: white;
	font-size: 120%;
	font-weight: bold;
	text-align: center;
}

.detailsForm .recombinationDetails{
	text-align: center;
}

.details .dsa-text {
	text-align: center;
	font-weight: bold;
	line-height: 150%;
	padding-top: 1.5em;
	padding-bottom: 1.5em;
	font-size: 110%;
}

.details .nov-genotype {
	font-size: 130%;
	font-weight: bold;
}

.details .nov-subclustering {
	font-weight: bold;
}

.details h2 {
	margin-top: 4ex;
	font-size: 110%;
	color: darkblue;
}

.details .label {
	color: darkblue;
	width: 25ex;
	display: inline-block;
	line-height: 120%;
	text-align: right;
	padding-right: 2ex;
}

.details .dsa-text .label {
	color: darkblue;
	width: auto;
	display: inline;
	padding-left: 3ex;
	padding-right: 0.5ex;
}

.details .dsa-text span + span + br + span + span {
	color: darkblue;
}

.details .dsa-images .legend {
	float: right;
}

.details .dsa-motivation {
	font-style: italic;
}

.details img.phyloTree {
	margin: 1em auto;
	border: 1px solid black;
}

.details div.phyloLinks {
	margin: 1em auto;
}

.decisionTreeHeader {
	display: block;
	margin: 1em auto 0.5em auto;
	text-align: center;
	font-size: 110%;
	font-weight: bold;
	color: darkblue;
}
	
.listContainer {
	margin-top: 0.5em;
	margin-bottom: 1em;
}

h1 {
	color: rgb(50,0,150);
	font-weight: bold;
  	font-size: 150%;
  	margin: 1em auto 1em 0.5em;
  	text-align: center;
}

.note, .footer {
	padding: 0.5em 3em 0.5em 0.5em;
	background-color: rgb(204, 204, 255);
	display: block;
	width: 80%;
	margin: 0px auto;
}

.footer{
	text-align: center;
	font-style: italic;
}

.nav_bar {
	margin: 1em auto;
	border-color: black;
	border-style: solid;
	border-width: 1px 0px 1px 0px;
	width: 80%;
	height: 30px;
	padding: 1em;
}

.nav_main { 
	list-style: none;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.nav_main li { 
	background: none; 
	display: inline; 
	margin: 0; 
	padding: 0; 
}

.nav_main a {
	display: inline-block;
	width: 12%;
	text-align: center;
	vertical-align: middle;
	
	text-decoration: underline;
	color: blue;
	cursor: pointer;
}

.edit-invalid {
	background-color:#f5baaa;
}

.edit-valid {
}

.details-extraComments {
	font-style:italic;
}

table.csv {
	width: 800px;
	empty-cells: hide;
	margin-left: auto;
	margin-right: auto;
}
table.csv td, table.csv td{
	padding: 0.2em;
	background-color: rgb(240,240,240);
	border: 2px solid white;
}
table.csv tr:first-child td{
	color: white;
	background-color: darkblue;
}

div.sequence, div.sequenceName {
	font-size: 75%;
	display: block;
	width: 500px;
	margin-left: auto;
	margin-right: auto;
	font-family: monospace;
}

div.sequence {
	margin-bottom: 1em;
}

span.refseq{
	display: block;
	text-align: center;
}

.monitor-form{
	text-align: center;
}

.analysisProgress{
	color: red;
}

.error {
	color: red;
	font-style: italic;
	padding: 1em;
}

.cite {
	vertical-align: super;
	font-size: 80%;
}

.bibitem {
	font-size: 80%;
}

.bibitem span {
	color: blue;
}

table.assignment-overview {
	border: 1px solid black;
	max-width: 500px;
}

.assignment-overview th {
	background-color: rgb(200,200,200);
	padding: 0.5em;
	text-align: center;
}

.assignment-overview th, .assignment-overview td {
	border-left: 1px solid black;
	padding: 0.5em;
}

.assignment-overview div {
	width: 35px;
	height: 10px;
}

.assignment-overview-total {
	border-top: 1px solid black;
}

.assignment-overview-filter {
	border: 1px solid black;
	padding: 0.5em;
}

.assignment-overview-filter th, .assignment-overview-filter td {
	border-left: 1px solid black;
	padding: 0.5em;
}

.recombination-form {
	width: 1200px;
	margin-left: auto;
	margin-right: auto;
}

.recombination-form table {
	width: 1000px;
	margin-left: auto;
	margin-right: auto;
}
.recombination-form .region {
	border: 1px solid black;
	margin: 2px;
	padding: 1em;
}

.region img {
	width: 400px;
}

.recombination-form .region:first-line{
	font-size: 120%;
	font-weight: bold;
	text-align: center;
}

.jobOverviewSummary {
	margin: 30px auto;
}

/* Background info pages */
.bold{
  font-weight:bold;
}
.centerimage{
  text-align:center;
  margin-top:0px;
  margin-bottom:0px;
  padding:0px;
}
.centertext{
  text-align:center;
}
.pic-label{
  font-weight:bold;
  font-size:110%;
  margin-bottom:20px;
  text-align:center;
}
table.reftable caption{
  font-weight:bold;
  font-size:110%;
  margin:5px 0 5px 0;
}

.fasta-ta {
	width: 100%;
}

.nav {
	width: 80%;
	height: 30px;
	text-align: center;
}

.nav ul {
	list-style: none;
	padding: 0px;
}

.nav li {
	background: none;
	display: inline;
	margin: 0;
	padding: 1em;
}

.start-form-header td {
	padding-right: 5px;
}

.header {
	align: center;
	
	margin-left: auto;
	margin-right: auto;
	width: 820px;
}

.div-row {
	align: center;
	
	margin-top: 2em;
	margin-left: auto;
	margin-right: auto;
	width: 820px;
}

.error-text {
	color: rgb(255,0,0);
}

